syntax = "proto3";
option java_outer_classname = "FrontierProtobuf";
option java_package = "it.unimi.di.law.bubing.protobuf";

message CrawlRequest {
    bytes schemeAuthority = 1;
    bytes urlPathQuery = 2;
}

message CrawlRequestOptions {
    bool analyseLang = 1;
    bool analyseDigest = 2;
    bool analyseCategory = 3;
    bool analyseTextQuality = 4;
}

message CrawledPageInfo {
    PageRobot pageRobot = 1;
    uint32 depth = 2;
    uint32 language = 3;
    float textQuality = 4;
    uint32 contentLength = 6;
    uint32 httpStatus = 7;
    string url = 8;
    string title = 9;
    uint32 fetchDuration = 10;
    uint32 fetchTime = 11;
    Categorization categorisation = 13;
    repeated LinkInfo internalLinks = 14;
    repeated LinkInfo externalLinks = 15;
}

message Categorization {

}

enum HTMLElement {
    UNKNOWN_HTML_ELEMENT = 0;
    H1 = 1;
    H2 = 2;
    H3 = 3;
    H4 = 4;
    H5 = 5;
    H6 = 6;
    LI = 7;
}

message LinkInfo {
    bytes schemeAuthority = 2;
    bytes pathQuery = 3;
    float weight = 4;
    uint32 position = 5;
    uint32 size = 6;
    HTMLElement htmlElement = 7;
    string linkContent = 8;
    LinkType linkType = 9;
    LinkRel linkRel = 10;
    CrawlerInfo crawlerInfo = 11;
}

message CrawlerInfo {
    bool isBlackListed = 1;
    bool doesRespectRobots = 2;
    bool matchesScheduleRule = 3;
}
enum LinkType {
    UNKOWN_LINK_TYPE = 0;
    FRAME = 1;
    IFRAME = 2;
    EMBED = 3;
    IMG = 4;
    OBJECT = 5;
    A = 6;
    AREA = 7;
    LINK = 8;
}

enum LinkRel {
    UNKOWN_LINK_REL = 0;
    CANONICAL = 1;
    NOFOLLOW_LINK = 2;
    REFRESH = 3;
    LOCATION = 4;
}

message PageRobot {
    bool NOINDEX = 1;
    bool NOFOLLOW = 2;
    bool NOARCHIVE = 3;
    bool NOSNIPPET = 4;
}

